# trivial_cpp_subproject

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CMakeLists.txt  main.cpp  {{cookiecutter.project_slug}}.cpp  {{cookiecutter.project_slug}}.h  {{cookiecutter.project_slug}}_test.cpp
{{cookiecutter.project_slug}}/include/: {{cookiecutter.project_slug}}.hpp
{{cookiecutter.project_slug}}/lib/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp  {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/: {{cookiecutter.project_slug}}.cpp  {{cookiecutter.project_slug}}_main.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  {{cookiecutter.project_slug}}_test.cpp  {{cookiecutter.project_slug}}_test_main.cpp
